--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
  <p class="alert"><%= alert %></p>
 <p class="navbar-text pull-right">
 <% if user_signed_in? %>
-Signed in as <%= current_user.email %>. Not you?
+Signed in as <%= current_user.user_name %>. Not you?
 <%= link_to "Sign out", destroy_user_session_path,:method => :delete %>
 <% else %>
 <%= link_to "Sign up", new_user_registration_path %> or
