Durgasree modified home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
  <p class="alert"><%= alert %></p>
 
  <%= render 'shared/menu'%>
-
+ <%= yield %>
 <script>
 	$('.carousel').carousel({
 	  interval: 2000
